== Revision history of libcerf, maintained by Joachim Wuttke ==

libcerf-2.5
  - Reworked numerics of erfcx and im_w_of_x to achieve an accuracy of a few epsilon.
  - Minor optimization of width.c (contributed by Alexander Kleinsorge)
  - For arbitrary numeric constants, choose powers of 2 (suggested by Alexander Kleinsorge)

libcerf-2.4, released 2aug23:
  - CMake: runtime destination corrected (bin, not lib)
  - CMake: removed option PORTABLE and compiler flag -march (unavailable on some architectures)

libcerf-2.3, released 10jan23:
  - Fix compiler flags; use -O3 for Release
    - Introduce CERF_COMPILE_OPTIONS to let users overwrite the hard-coded compile options
  - Under gcc, use -march=native
    - PACKAGE MAINTAINERS: use -DPORTABLE=ON to override this !!
  - Add test coverage for erfcx, dawson, im_w_of_x (against nearby complex and status quo)
  - Avoid some divisions in function voigt (suggested by Alexander Kleinsorge)
  - Accelerate lookup in erfcx, im_w_of_x (avoid long switch, contributed by Alexander Kleinsorge)
  - Work around clang bug https://github.com/llvm/llvm-project/issues/59681 (0+I*Inf->NaN)

libcerf-2.2, released 7nov22:
  - No longer raise underflow error in w_of_z for large real arg (contributed by Ethan Merritt)
  - In test suite, confound zero with values close to underflow
  - Remove some invisible files that had slipped in accidentally (noticed by Christoph Junghans)
  - Windows binary now built with Visual Studio 17 2022

libcerf-2.1, released 8apr22:
  - Provide cerfConfig.cmake (contributed by Lori A. Burns and Christoph Junghans)
  - libcerf.pc: Remove hard-coded lib/
  - Version number incremented to overcome upstream problems with withdrawn release 2.0

libcerf-1.17, released 29jun21:
  - Correct pkgconfig installation directory (use GNU install dirs, install to LIBDIR/pkgconfig)

libcerf-1.16, released 23jun21:
  - voigt_hwhm: replaced Newton's method (which failed for rare parameter combinations)