@@ -59,6 +59,7 @@
 #include "cerf.h"
 #include <math.h>
 #include "defs.h" // defines _cerf_cmplx, NaN, C, cexp, ...
+#include <stdalign.h>
 #include <stdio.h>
 
 // for analysing the algorithm:
@@ -67,7 +68,7 @@ IMPORT extern int faddeeva_nofterms;
 
 //--- The following code is generated by devtool/pro_erfcx_chebcoeffs.py; do not edit
 // clang-format off
-static const double ChebCoeffs89[448 * 2] ALIGN(64) = {
+alignas(64) static const double ChebCoeffs89[448 * 2] = {
         0x0.cc82dfe7160cf0p-85, -0x0.b61267c97860a0p-96, // x in subrange 0:0 (0.125..0.126953)
      0x0.caeae79125c1d0p-85, -0x0.b491ff689c9fd0p-96, // x in subrange 0:1 (0.126953..0.128906)
      0x0.c9564c63fdc300p-85, -0x0.b314ececc79b78p-96, // x in subrange 0:2 (0.128906..0.130859)
@@ -517,7 +518,7 @@ static const double ChebCoeffs89[448 * 2] ALIGN(64) = {
      0x0.930d25265fe488p-68, -0x0.91f02588ae6840p-76, // x in subrange 6:62 (15.75..15.875)
      0x0.892d119de3af78p-68, -0x0.871c087acd6bf0p-76, // x in subrange 6:63 (15.875..16)
 };
-static const double ChebCoeffs[448 * 8] ALIGN(64) = {
+alignas(64) static const double ChebCoeffs[448 * 8] = {
  0x0.df5145019522b0p0, -0x0.e8997b2143a390p-10, 0x0.c203ef3ea45d50p-20, -0x0.8ac5a82914f488p-30, 0x0.b08888cf777988p-41, -0x0.cc3e7dab38e338p-52, 0x0.da3976dc134100p-63, -0x0.d9b66ca2fb89f0p-74, // x in subrange 0:0 (0.125..0.126953)
  0x0.dedd28b3ad1e28p0, -0x0.e7d7df1a30eb98p-10, 0x0.c1344ae9135c08p-20, -0x0.8a159f033fcbb8p-30, 0x0.af8a06d168f2b8p-41, -0x0.caf84485c45518p-52, 0x0.d8bddc94789600p-63, -0x0.d81eff78e130b0p-74, // x in subrange 0:1 (0.126953..0.128906)
  0x0.de696cfff586d8p0, -0x0.e7171233ac6f48p-10, 0x0.c065ade2bf6160p-20, -0x0.89669393fb6298p-30, 0x0.ae8d1b37c6fad0p-41, -0x0.c9b442b2602410p-52, 0x0.d7450883ec8c80p-63, -0x0.d68abee0ec5fa8p-74, // x in subrange 0:2 (0.128906..0.130859)
