@@ -58,6 +58,7 @@
 #include "cerf.h"
 #include <math.h>
 #include "defs.h" // defines _cerf_cmplx, NaN, C, cexp, ...
+#include <stdalign.h>
 //#include <stdio.h>
 
 // for analysing the algorithm:
@@ -66,7 +67,7 @@ IMPORT extern int faddeeva_nofterms;
 
 //--- The following code is generated by devtool/pro_imwofx_chebcoeffs.py; do not edit
 // clang-format off
-static const double ChebCoeffs8[288] ALIGN(64) = {
+alignas(64) static const double ChebCoeffs8[288] = {
         0x0.8427afe4a6ca98p-68, // x in subrange 0:0 (0.5..0.507812)
      0x0.81428edbee7da8p-68, // x in subrange 0:1 (0.507812..0.515625)
      0x0.fc7e406530bdd8p-69, // x in subrange 0:2 (0.515625..0.523438)
@@ -356,7 +357,7 @@ static const double ChebCoeffs8[288] ALIGN(64) = {
      0x0.a3d868f6b36788p-64, // x in subrange 4:30 (11.75..11.875)
      0x0.947e8d117ed8b0p-64, // x in subrange 4:31 (11.875..12)
 };
-static const double ChebCoeffs[288 * 8] ALIGN(64) = {
+alignas(64) static const double ChebCoeffs[288 * 8] = {
  0x0.f6809795a1f940p-1, 0x0.a4a6a8a1c31838p-8, -0x0.ce3846c4544bd0p-16, -0x0.a1f622978c5010p-26, 0x0.e29f889febb8e8p-33, -0x0.d4954384857bb0p-45, -0x0.929e6374fab2d8p-50, 0x0.e59bb7b81bec50p-61, // x in subrange 0:0 (0.5..0.507812)
  0x0.f90cbdfc4295b0p-1, 0x0.a16befcc13a438p-8, -0x0.cf209ab38f57e0p-16, -0x0.93d0ac5b2e1b60p-26, 0x0.e2098cc0397de0p-33, -0x0.85a1c2b554aa60p-44, -0x0.90fe37f28635d0p-50, 0x0.f5f2ac485b04e0p-61, // x in subrange 0:1 (0.507812..0.515625)
  0x0.fb8bf275790688p-1, 0x0.9e2dc00d21d670p-8, -0x0.cff3be018f17a8p-16, -0x0.85b5a63b86a860p-26, 0x0.e15195d8ca5508p-33, -0x0.a0a83258cf4f70p-44, -0x0.8f41c66274e448p-50, 0x0.82f58a6929b840p-60, // x in subrange 0:2 (0.515625..0.523438)
