@@ -1,6 +1,7 @@
 == Revision history of libcerf, maintained by Joachim Wuttke ==
 
 libcerf-2.5
+  - Required C standard now C11 instead of C99
   - Reworked numerics of erfcx and im_w_of_x to achieve an accuracy of a few epsilon.
   - Minor optimization of width.c (contributed by Alexander Kleinsorge)
   - For arbitrary numeric constants, choose powers of 2 (suggested by Alexander Kleinsorge)
